--- a/SeaShantyEncyclopedia/static/style.css
+++ b/SeaShantyEncyclopedia/static/style.css
@@ -6,4 +6,34 @@ body {
 
 .dropdown {
   font-size: 20px;
+  display: none;
+
+}
+
+.dropdownText {
+  margin:0px;
+}
+
+.btn {
+  font-size: 20px;
+  background-color: white;
+  border: none;
+  text-align: left;
+  text-decoration: none;
+  outline: none;
+  opacity: 0.775;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.entry {
+  margin-left: 30px;
+  margin-right: 30px;
+  padding: 15px;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: black;
+  border-width: 2px;
 }
