Flask is now hosting the html on localhost, + Rearranged css and javascript files

--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"> </script>
+    <link rel="stylesheet" href="/static/style.css">
+    <script defer src="/static/script.js"> </script>
     <title>Sea Shanty Encyclopedia</title>
   </head>
 
@@ -13,7 +13,7 @@
       <div class="dropdown" id="box1">
         <p> </p>
         <p class="dropdownText"> Also known as: </p>
-        <p class="dropdownText"> Country of origin </p>
+        <p class="dropdownText"> Country of origin: </p>
         <p class="dropdownText"> Language: </p>
         <p class="dropdownText"> Description: </p>
         <p class="dropdownText"> Lyrics: </p>
