--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -8,6 +8,7 @@
 
   <body>
     <p class="test"> Hello World! </p>
+    <p> Hello </p>
     <div class="entry">
       <button class="btn" onclick="dropdown('box1')">Title</button>
       <div class="dropdown" id="box1">
