--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -7,8 +7,7 @@
   </head>
 
   <body>
-    <p class="test"> Hello World! </p>
-    <p> Hello </p>
+    <p class="title">Sea Shanty Encyclopedia   </p>
     <div class="entry">
       <button class="btn" onclick="dropdown('box1')">Title</button>
       <div class="dropdown" id="box1">
