All data is now being displayed correctly :)

--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -14,8 +14,8 @@
         <button class="btn" onclick="dropdown('box1')">{{shanty.Name}}</button>
           <p> </p>
           <p class="dropdownText"> Also known as: {{shanty.AltName}}</p>
-          <p class="dropdownText"> Country of origin: </p>
-          <p class="dropdownText"> Language: </p>
+          <p class="dropdownText"> Country of origin: {{shanty.Country}}</p>
+          <p class="dropdownText"> Language: {{shanty.Language}}</p>
           <p class="dropdownText"> Description: {{shanty.Desc}}</p>
           <p class="dropdownText"> Lyrics: </p>
       </div>
