Reformed Login/Logout session

--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -8,55 +8,61 @@
 
   <body>
     <p class="title">Sea Shanty Encyclopedia   </p>
+    <form method="" action="/login">
+      <input type="submit" value="Log in">
+    </form>
+    <br>
+    {% if session.admin == 'yes' %}
+      <div id="AdminPanel" class="AdminPanel">
+        <p> Admin Panel</p>
+        <p> Add a new shanty </p>
+        <form method="POST" action="/">
+          Name: <input type="text" id="new_name" name="new_name">
+          Alternative name: <input type="text" id="new_altName" name="new_altName">
+          Country of Origin: <select name="new_country" id="new_country"> <!-- This is inefficent but i will work for now -->
+            <option value="United Kingdom"> United Kingdom </option>
+            <option value="Germany"> Germany </option>
+            <option value="France"> France </option>
+            <option value="Netherlands"> Netherlands </option>
+            <option value="Norway"> Norway </option>
+            <option value="Denmark"> Denmark </option>
+            <option value="Australia"> Australia </option>
+            <option value="New Zealand"> New Zealand </option>
+            <option value="United States"> United States </option>
+            <option value="Mexico"> Mexico </option>
+            <option value="Brazil"> Brazil </option>
+          </select>
+          Language: <select name="new_language" id="new_language">
+            <option value="English"> English </option>
+            <option value="High German"> High German </option>
+            <option value="Norwegian"> Norwegian </option>
+            <option value="French"> French </option>
+          </select>
+          Description: <input type="text" id="new_description" name="new_description">
+          Audio Source: <input type="text" id="new_audioSource" name="new_audioSource">
+          <input type="submit" value="Add">
+        </form>
+        <br>
+        <form method="POST" action="/delete">
+          <select name="delete_country" id="delete_country">
+            {% for shanty in shantys %}
+              <option value="{{shanty.Name}}"> {{shanty.Name}} </option>
+            {% endfor %}
+          </select>
 
-    <input type="password" id="Password" name="Password"><br>
-    <div id="AdminPanel" class="AdminPanel">
-      <p> Admin Panel</p>
-      <p> Add a new shanty </p>
-      <form method="POST" action="/">
-        Name: <input type="text" id="new_name" name="new_name">
-        Alternative name: <input type="text" id="new_altName" name="new_altName">
-        Country of Origin: <select name="new_country" id="new_country"> <!-- This is inefficent but i will work for now -->
-          <option value="United Kingdom"> United Kingdom </option>
-          <option value="Germany"> Germany </option>
-          <option value="France"> France </option>
-          <option value="Netherlands"> Netherlands </option>
-          <option value="Norway"> Norway </option>
-          <option value="Denmark"> Denmark </option>
-          <option value="Australia"> Australia </option>
-          <option value="New Zealand"> New Zealand </option>
-          <option value="United States"> United States </option>
-          <option value="Mexico"> Mexico </option>
-          <option value="Brazil"> Brazil </option>
-        </select>
-        Language: <select name="new_language" id="new_language">
-          <option value="English"> English </option>
-          <option value="High German"> High German </option>
-          <option value="Norwegian"> Norwegian </option>
-          <option value="French"> French </option>
-        </select>
-        Description: <input type="text" id="new_description" name="new_description">
-        Audio Source: <input type="text" id="new_audioSource" name="new_audioSource">
-        <input type="submit" value="Add">
-      </form>
-      <br>
-      <form method="POST" action="/delete">
-        <select name="delete_country" id="delete_country">
-          {% for shanty in shantys %}
-            <option value="{{shanty.Name}}"> {{shanty.Name}} </option>
-          {% endfor %}
-        </select>
+          <button id="safetyButton" onclick="areYouSure()" type="button"> Delete </button>
+          <div class="hide" id="deleteButton">
+            <input type="submit" value="Are you sure?">
+          </div>
 
-        <button id="safetyButton" onclick="areYouSure()" type="button"> Delete </button>
-        <div class="hide" id="deleteButton">
-          <input type="submit" value="Are you sure?">
-        </div>
-
-      </form>
-      <br>
-      <button onclick="logout()"> Log out </button>
-      <br>
-    </div>
+        </form>
+        <br>
+        <form method="POST" action="/logout">
+          <input type="submit" value="Log Out">
+        </form>
+        <br>
+      </div>
+    {% endif %}
 
     {% for shanty in shantys %}
     <div class="entry">
@@ -67,7 +73,6 @@
         <p class="dropdownText"> Language: {{shanty.Language}}</p>
         <p class="dropdownText"> Description: {{shanty.Description}}</p>
         <p class="dropdownText"> Lyrics: </p>
-        <p class="dropdownText"> {{shanty.AudioSource}} </p>
         <audio controls>
           <source src="/static/{{shanty.AudioSource}}" type="audio/mpeg">
         </audio>
