--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -36,12 +36,14 @@
             <option value="United States"> United States </option>
             <option value="Mexico"> Mexico </option>
             <option value="Brazil"> Brazil </option>
+            <option value="Poland"> Poland </option>
           </select>
           <p> Language: <select name="new_language" id="new_language"> </p>
             <option value="English"> English </option>
             <option value="High German"> High German </option>
             <option value="Norwegian"> Norwegian </option>
             <option value="French"> French </option>
+            <option value="Polish"> Polish </option>
           </select>
           <p> Description: </p>
           <textarea id="new_description" name="new_description" cols="90" rows="10"></textarea>
