--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <p class="title">Sea Shanty Encyclopedia   </p>
+    <p class="title entry">Sea Shanty Encyclopedia   </p>
     {% if session.admin =='yes'%}
-    <p> You are logged in! </p>
+     <p></p>
     {% else %}
     <form method="" action="/login">
       <input type="submit" value="Log in">
@@ -19,6 +19,7 @@
     {% if session.admin == 'yes' %}
     <div class="entry">
       <div id="AdminPanel" class="AdminPanel">
+        <p> You are logged in! </p>
         <p> Admin Panel</p>
         <p> Add a new shanty </p>
         <form method="POST" action="/">
@@ -85,19 +86,21 @@
     <br>
 
     {% for shanty in shantys %}
-    <div class="entry">
-      <button class="btn" onclick="dropdown('box1')">{{shanty.Name}}</button>
-        <p> </p>
-        <p class="dropdownText"> Also known as: {{shanty.Alternative_Names}}</p>
-        <p class="dropdownText"> Country of origin: {{shanty.Country_Origin}}</p>
-        <p class="dropdownText"> Language: {{shanty.Language}}</p>
-        <p class="dropdownText"> Description: {{shanty.Description}}</p>
-        <p class="dropdownText"> Lyrics: </p>
-        <textarea readonly cols="60" rows="15"> {{shanty.Lyrics}} </textarea>
-        <br>
-        <audio controls>
-          <source src="/static/{{shanty.AudioSource}}" type="audio/mpeg">
-        </audio>
+    <div class="entry collapsed">
+      <button class="btn">{{shanty.Name}}</button>
+        <div class="info">
+          <p> </p>
+          <p class="dropdownText"> Also known as: {{shanty.Alternative_Names}}</p>
+          <p class="dropdownText"> Country of origin: {{shanty.Country_Origin}}</p>
+          <p class="dropdownText"> Language: {{shanty.Language}}</p>
+          <p class="dropdownText"> Description: {{shanty.Description}}</p>
+          <p class="dropdownText"> Lyrics: </p>
+          <textarea readonly cols="60" rows="15"> {{shanty.Lyrics}} </textarea>
+          <br>
+          <audio controls>
+            <source src="/static/{{shanty.AudioSource}}" type="audio/mpeg">
+          </audio>
+        </div>
     </div>
     <p> </p>
     {% endfor %}
