--- a/SeaShantyEncyclopedia/static/style.css
+++ b/SeaShantyEncyclopedia/static/style.css
@@ -8,9 +8,15 @@
   --c4: #F5F5F5; /* White */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: var(--c4);
   font-family: Hind;
+  margin-left: 0;
+  margin-right:0;
   color: var(--c3);
 }
 
@@ -21,9 +27,31 @@ body {
 .hide {
   display: none;
 }
+
 .title {
   font-size: 35px;
-  margin: 20px;
+  margin-bottom: 5px;
+}
+
+.navbar {
+  list-style-type: none;
+  height:30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  border-style: solid;
+  border-radius: 0px;
+  border-color: black;
+  border-width: 2px;
+  background-color:white;
+  padding-left:10px;
+  border-left:0px;
+  border-right:0px;
+  padding:4px;
+}
+
+.navtable {
+  width:40px;
 }
 
 .dropdown {
@@ -47,7 +75,8 @@ body {
   font-size: 20px;
   border-color: rgba(42, 43, 42, 0.75);
   padding: 5px;
-  width: 150px;
+  padding-left: 10px;
+  padding-right: 10px;
   text-align: left;
   text-decoration: none;
   outline: none;
@@ -59,8 +88,15 @@ body {
   color:var(--c3);
 }
 
+.smallButton {
+  background-color:var(--c4);
+  color:var(--c3);
+  border-color: var(--c2);
+}
+
 .entry {
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-top: 5px;
   margin-right: 30px;
   padding: 15px;
   border-style: solid;
