--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -40,7 +40,16 @@
             {% endfor %}
           </select> </th>
 
-          <th> <button id="gotoButton">Go to </button> </th>
+          <th> <button id="gotoButton"> Go to </button> </th>
+
+          <th> <form method="" action="/gotoShanty">
+            <input type="submit" class="smallButton" value="Shanties">
+          </form> </th>
+
+          <th> <form method="" action="/gotoInfo">
+            <input type="submit" class="smallButton" value="What are shanties?">
+          </form> </th>
+
         </tr>
       </table>
     </div>
