--- a/SeaShantyEncyclopedia/templates/info.html
+++ b/SeaShantyEncyclopedia/templates/info.html
@@ -55,7 +55,49 @@
           trust in the shanty man, but in the shanties." </p>
         <br>
         <p> What are shanties? </p>
-        <p> Sea shanties are </p>
+        <p> Sea shanties are traditionaly work songs that were sung onboard of merchant sailing vessels.
+        Lately this term has expanded to encompass sea ballads and maritime folk songs.</p>
+
+
+
+        <p> Sea shanties were used to organize labor on board of ships and co-ordinate pulls and
+          pushes both on deck and with pumps </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2Ta9F1q_3Gs"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KBT8pbM6nVA"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
+        <p> Sea shanties live on today with a small community of listeners. A few Sea shanty bands such
+          as 'The Longest Johns' continue to record their rendition of Shanties and produce their own
+          for the niche community. </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4uukiGqUdzg?start=6"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
+        <p> "To me!" is a common phrase in found in nearly all traditional sea shanties. The "To Me!"
+          was the call from the shantyman (The man leading the shanty) for the rest of the singers to
+          sing out the refrain </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2wgedMKGtlk?start=29"
+         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+
+        <p> Sea shanties rose to a small ammount of popularity through ubisofts release of 'Assasins creed: Black flag'</p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/08A-jXPVx68?start=6"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
+        <p> Sea shanties transition to folk </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/B6Nl3PaTimA?start=41"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
       </div>
     </div>
 
